--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -29,7 +29,7 @@
                 </form>
             </div>
             <div class="card-footer text-center">
-                <small>已有账号？ <a href="{{ url_for('login') }}">直接登录</a></small>
+                <small>已有账号？ <a href="{{ url_for('auth.login') }}">直接登录</a></small>
             </div>
         </div>
     </div>
