--- a/web/templates/404.html
+++ b/web/templates/404.html
@@ -5,6 +5,6 @@
     <h1 class="display-1 text-warning">404</h1>
     <h2 class="mb-4">页面未找到</h2>
     <p class="lead">抱歉，您访问的页面不存在。</p>
-    <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">返回首页</a>
+    <a href="{{ url_for('main.index') }}" class="btn btn-primary btn-lg">返回首页</a>
 </div>
 {% endblock %}
