--- a/web/templates/500.html
+++ b/web/templates/500.html
@@ -5,6 +5,6 @@
     <h1 class="display-1 text-danger">500</h1>
     <h2 class="mb-4">服务器内部错误</h2>
     <p class="lead">抱歉，服务器遇到了一些问题，请稍后再试。</p>
-    <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">返回首页</a>
+    <a href="{{ url_for('main.index') }}" class="btn btn-primary btn-lg">返回首页</a>
 </div>
 {% endblock %}
