--- a/web/templates/forum/board.html
+++ b/web/templates/forum/board.html
@@ -30,7 +30,7 @@
                     <span class="fw-bold fs-5">{{ topic.title }}</span>
                 </div>
                 <small class="text-muted">
-                    <i class="bi bi-person"></i> <a href="{{ url_for('user_profile', user_id=topic.user.id) }}" class="text-decoration-none position-relative" style="z-index: 2; color: #0d6efd;">{{ topic.user.username }}</a> &nbsp;
+                    <i class="bi bi-person"></i> <a href="{{ url_for('main.user_profile', user_id=topic.user.id) }}" class="text-decoration-none position-relative" style="z-index: 2; color: #0d6efd;">{{ topic.user.username }}</a> &nbsp;
                     <i class="bi bi-clock"></i> {{ topic.updated_at.strftime('%Y-%m-%d %H:%M') }}
                 </small>
             </div>
