--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -25,7 +25,7 @@
                 </form>
             </div>
             <div class="card-footer text-center">
-                <small>还没有账号？ <a href="{{ url_for('register') }}">立即注册</a></small>
+                <small>还没有账号？ <a href="{{ url_for('auth.register') }}">立即注册</a></small>
             </div>
         </div>
     </div>
